--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,14 +9,15 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Semester_6.AppBarOverlay">
+        android:theme="@style/Theme.Semester_6.AppBarOverlay"
+        >
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Semester_6.PopupOverlay" >
+            app:popupTheme="@style/Theme.Semester_6.PopupOverlay"
+            app:titleTextColor="#fff">
         </androidx.appcompat.widget.Toolbar>
 
 
