--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -116,6 +116,8 @@
             android:textColor="#fff"
             android:text="TextView" />
     </LinearLayout>
+    "<!--" then end your comment with
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -123,7 +125,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp">
-
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
@@ -152,4 +153,5 @@
             android:layout_height="wrap_content"
             android:text="Add To WishList" />
     </LinearLayout>
+    " -->"
 </LinearLayout>
