--- a/app/src/main/res/layout/mycart_row.xml
+++ b/app/src/main/res/layout/mycart_row.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="5dp"
     app:cardCornerRadius="5dp"
-    android:background="#69779b"
+    android:background="#3aa8c1"
     app:cardUseCompatPadding="true">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,17 +18,9 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/bookImg"
+                android:id="@+id/bookImgCart"
                 android:layout_width="match_parent"
                 android:layout_height="120dp" />
-
-            <ImageView
-                android:id="@+id/myCart"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/cart"
-                android:layout_gravity="right"
-                android:layout_marginTop="-120dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -42,7 +32,7 @@
             android:paddingBottom="10dp">
 
             <TextView
-                android:id="@+id/bookname"
+                android:id="@+id/booknameCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="bookname"
