--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="660dp"
+    android:background="#FFFFFF"
     tools:context=".ui.Profile.ProfileFragment">
 
     <LinearLayout
@@ -43,7 +44,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="230dp"
         android:layout_marginBottom="50dp"
-        android:background="#3aa8c1"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
