--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:textAlignment="center"
-        app:cardBackgroundColor="#fff"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
 
         <TextView
