--- a/app/src/main/res/layout/activity_registrationpage.xml
+++ b/app/src/main/res/layout/activity_registrationpage.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:textAlignment="center"
-        app:cardBackgroundColor="#fff"
+        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
 
 
