--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:focusable="false"
+    android:background="#FFFFFF"
     android:focusableInTouchMode="true"
     tools:context=".ui.home.HomeFragment">
 
