--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="660dp"
+    android:background="#FFFFFF"
     tools:context=".ui.CoreTeam.CoreTeamFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
