--- a/app/src/main/res/layout/mycart_row.xml
+++ b/app/src/main/res/layout/mycart_row.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="5dp"
     app:cardCornerRadius="5dp"
-    android:background="#3aa8c1"
     app:cardUseCompatPadding="true">
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +20,14 @@
                 android:id="@+id/bookImgCart"
                 android:layout_width="match_parent"
                 android:layout_height="120dp" />
+            <ImageView
+                android:id="@+id/deleteInCart"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/delete"
+                android:layout_gravity="right"
+                android:layout_marginTop="-120dp"/>
+
         </LinearLayout>
 
         <LinearLayout
