--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -26,11 +26,22 @@
 
             <ImageView
                 android:id="@+id/myCart"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/cart"
                 android:layout_gravity="right"
-                android:layout_marginTop="-120dp"/>
+                android:layout_marginRight="-4.5dp"
+                android:layout_marginTop="-124.5dp"/>
+
+            <ImageView
+                android:id="@+id/successFullAdd"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/success"
+                android:layout_gravity="right"
+                android:layout_marginTop="-55dp"
+                android:layout_marginRight="6dp"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <LinearLayout
