--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,50 +30,67 @@
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
 
-        <TextView
-            android:id="@+id/login"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LogIn"
-            android:textAlignment="center"
-            android:textSize="30dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/loginemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Email"
-            android:layout_marginTop="100dp"
-            android:inputType="textEmailAddress"
-            android:layout_marginLeft="20dp"
-            android:drawableRight="@drawable/ic_baseline_person_24"
-            android:layout_marginRight="20dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/loginpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Password"
-            android:layout_marginTop="200dp"
-            android:inputType="textPassword"
-            android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+                <TextView
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
+                    android:layout_marginTop="30dp"
+                    android:text="LogIn"
+                    android:textAlignment="center"
+                    android:textSize="30dp" />
 
-        <Button
-            android:id="@+id/loginbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="300dp"
-            android:layout_marginBottom="20dp"
-            android:text="login"
-            android:textSize="20dp" />
+                <EditText
+                    android:id="@+id/loginemail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/edittext_shap"
+                    android:drawableRight="@drawable/ic_baseline_email_24"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:paddingBottom="7dp"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textColorHint="@color/black" />
 
+                <EditText
+                    android:id="@+id/loginpassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:background="@drawable/edittext_shap"
+                    android:paddingBottom="7dp"
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/cardview_dark_background"
+                    android:layout_marginTop="60dp"
+                    android:inputType="textPassword"
+                    android:drawableRight="@drawable/ic_baseline_vpn_key_24"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
 
+                <ImageView
+                    android:id="@+id/loginbutton"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/login"
+                    android:layout_marginBottom="10dp"/>
+            </LinearLayout>
+        </ScrollView>
         <ProgressBar
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -82,22 +99,21 @@
             android:id="@+id/proBarLogin"/>
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/logintosignup"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="230dp"
-        android:layout_marginTop="40dp"
-        android:text="signup" />
+        android:textAlignment="center"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/logintosignup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:textColor="#fff"
+            android:text="Create new account" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Don't have account then"
-        android:textSize="20dp"
-        android:layout_marginTop="-40dp"
-        android:layout_marginLeft="10dp"/>
-
+    </LinearLayout>
 
 </LinearLayout>
