--- a/app/src/main/res/layout/activity_registrationpage.xml
+++ b/app/src/main/res/layout/activity_registrationpage.xml
@@ -12,105 +12,140 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="Books4All"
         android:textAlignment="center"
         android:textSize="40dp"
-        android:textColor="#fff"
-        android:layout_marginTop="10dp"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="60dp" />
+        android:textColor="#fff"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:textAlignment="center"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
 
-
-        <TextView
-            android:id="@+id/signup"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SignUp"
-            android:textAlignment="center"
-            android:textSize="30dp"
-            android:layout_marginTop="10dp"
-            />
+            android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/signupname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:ems="10"
-            android:hint="Name"
-            android:drawableRight="@drawable/ic_baseline_person_24"
-            android:inputType="textPersonName"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/signup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:text="SignUp"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:layout_marginTop="10dp"
+                    />
 
 
-        <EditText
-            android:id="@+id/signupPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:ems="10"
-            android:hint="Phone"
-            android:drawableRight="@drawable/ic_baseline_phone_android_24"
-            android:inputType="phone"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+                <EditText
+                    android:id="@+id/signupname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/edittext_shap"
+                    android:drawableRight="@drawable/ic_baseline_person_24"
+                    android:ems="10"
+                    android:hint="Name"
+                    android:inputType="textPersonName"
+                    android:paddingBottom="7dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black" />
 
-        <EditText
-            android:id="@+id/signupemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Email"
-            android:drawableRight="@drawable/ic_baseline_email_24"
-            android:layout_marginTop="180dp"
-            android:inputType="textEmailAddress"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+                <EditText
+                    android:id="@+id/signupPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shap"
+                    android:paddingBottom="7dp"
+                    android:layout_marginTop="20dp"
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/black"
+                    android:ems="10"
+                    android:hint="Phone"
+                    android:drawableRight="@drawable/ic_baseline_phone_android_24"
+                    android:inputType="phone"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"/>
 
-        <EditText
-            android:id="@+id/signuppassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Password"
-            android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-            android:layout_marginTop="240dp"
-            android:inputType="textPassword"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+                <EditText
+                    android:id="@+id/signupemail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/edittext_shap"
+                    android:drawableRight="@drawable/ic_baseline_email_24"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:paddingBottom="7dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black" />
 
-        <EditText
-            android:id="@+id/signupconformpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginTop="300dp"
-            android:hint="Conform Password"
-            android:inputType="textPassword"
-            android:layout_marginLeft="20dp"
-            android:drawableRight="@drawable/ic_baseline_vpn_key_24"
-            android:layout_marginRight="20dp"/>
+                <EditText
+                    android:id="@+id/signuppassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shap"
+                    android:paddingBottom="7dp"
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/black"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:layout_marginTop="20dp"
+                    android:drawableRight="@drawable/ic_baseline_vpn_key_24"
+                    android:inputType="textPassword"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"/>
 
-        <Button
-            android:id="@+id/signupbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="370dp"
-            android:layout_marginBottom="20dp"
-            android:text="SignUp"
-            android:textSize="20dp"/>
+                <EditText
+                    android:id="@+id/signupconformpassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shap"
+                    android:paddingBottom="7dp"
+                    android:layout_marginTop="20dp"
+                    android:textColorHint="@color/black"
+                    android:textColor="@color/black"
+                    android:ems="10"
+                    android:hint="Conform Password"
+                    android:inputType="textPassword"
+                    android:layout_marginLeft="20dp"
+                    android:drawableRight="@drawable/ic_baseline_vpn_key_24"
+                    android:layout_marginRight="20dp"/>
 
+                <Button
+                    android:id="@+id/verifiyEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="verify Email"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"/>
+
+                <ImageView
+                    android:id="@+id/signupbutton"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/signup"
+                    android:layout_marginBottom="10dp"/>
+
+            </LinearLayout>
+        </ScrollView>
 
         <ProgressBar
             android:layout_width="match_parent"
@@ -121,22 +156,21 @@
 
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/signuptologin"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="230dp"
-        android:layout_marginTop="40dp"
-        android:text="login" />
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewmy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="already registered then"
-        android:textSize="20dp"
-        android:layout_marginTop="-40dp"
-        android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/signuptologin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LogIn instead"
+            android:textAlignment="center"
+            android:textColor="#fff"
+            android:textSize="20dp" />
 
-
+    </LinearLayout>
 </LinearLayout>
