--- a/app/src/main/res/layout/activity_item_details_cart.xml
+++ b/app/src/main/res/layout/activity_item_details_cart.xml
@@ -130,6 +130,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:text="Rent Now"
+            android:visibility="gone"
             android:layout_marginRight="5dp"/>
 
         <Button
@@ -146,11 +147,6 @@
         android:orientation="vertical"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp">
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add To WishList" />
     </LinearLayout>
 
 </LinearLayout>
