--- a/app/src/main/res/layout/activity_sell_page.xml
+++ b/app/src/main/res/layout/activity_sell_page.xml
@@ -23,14 +23,6 @@
                 android:layout_marginTop="30dp"
                 app:cardCornerRadius="20dp">
 
-                <ProgressBar
-                    android:id="@+id/sellprogressBar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="360dp"
-                    android:visibility="invisible"/>
-
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -204,4 +196,12 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/sellprogressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_marginTop="320dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 </RelativeLayout>
