--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,36 @@
         android:layout_marginTop="10dp"
         tools:layout_editor_absoluteX="230dp"
         tools:layout_editor_absoluteY="60dp" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/verifymessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="you have not received mail then"
+        android:textSize="15dp"
+        android:textColor="#fff"
+        android:layout_marginRight="5dp"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/verifiybuttonText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="VerifiyAgain"
+        android:textAlignment="center"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textColor="#c02739"
+        android:background="@drawable/verifyshap"
+        android:visibility="gone"/>
+    </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:textAlignment="center"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
