--- a/app/src/main/res/drawable/sppinershap.xml
+++ b/app/src/main/res/drawable/sppinershap.xml
@@ -4,13 +4,13 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#000" />
+                android:color="#892cdc" />
             <solid android:color="#fff" />
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="#fff" />
+            <stroke android:width="1dp" android:color="#892cdc" />
         </shape>
     </item>
 </layer-list>
