--- a/app/src/main/res/layout/activity_itemdetails_mysold.xml
+++ b/app/src/main/res/layout/activity_itemdetails_mysold.xml
@@ -17,7 +17,7 @@
         android:id="@+id/bookNameFullDetailsSold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="bookNameFullDetails"
+        android:textColor="@color/black"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
         android:textAlignment="center"/>
@@ -36,42 +36,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="bookAuthorFullDetails" />
+            />
 
         <TextView
             android:id="@+id/bookTypeFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="bookTypeFullDetails" />
-
-        <TextView
-            android:id="@+id/bookRentingFullDetailsSold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:text="bookRentingFullDetails" />
+            />
 
         <TextView
             android:id="@+id/bookSellingFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="bookSellingFullDetails" />
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/bookRentingFullDetailsSold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:textColor="#fff" />
+            <TextView
+                android:id="@+id/renttimeFullDetailsSold"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="#fff"/>
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/bookAdressFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="bookAdressFullDetails" />
+           />
 
         <TextView
             android:id="@+id/bookZipcodeFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="bookZipcodeFullDetails" />
+/>
 
     </LinearLayout>
 
@@ -99,21 +110,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#fff"
-            android:text="TextView"
             />
 
         <TextView
             android:id="@+id/userEmailSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:text="TextView" />
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/userPhoneSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:text="TextView" />
+            android:textColor="#fff" />
     </LinearLayout>
 </LinearLayout>
